--- a/styles.css
+++ b/styles.css
@@ -68,14 +68,16 @@ font-size: 3vh
 }
 
 .button{
-    max-width: 25vw;
+    display: flex;
+    justify-content:center;
+    width: 25vw;
     text-align: center;
     font-size: 2.1vh;
     color:#e6e6e6;
     background-color: #1b2552;
     border-radius: 5px;
     padding: 20px 50px;
-    margin-left: 15vw;
+    margin: auto;
 }
 
 .find{
@@ -126,4 +128,7 @@ footer{
     padding: 10px 70px;
     display: flex;
     flex-direction: column;
+    margin: 30px 0;
+    margin-left: -50px;
+    margin-right: -50px;
 }
