--- a/styles.css
+++ b/styles.css
@@ -9,25 +9,28 @@ body {
 }
 
 .time{
-font-size: 3vh
+font-size: 3vh;
 }
 .signal{
     height: 20px;
+    padding-right: 10px;
 }
 .wifi{
     height: 20px;
+    padding-right: 10px;
 }
 .battery{
     height: 20px;
 }
 header{
     display: flex;
-    border: solid 2px black;
 }
 .symbols{
     display: flex;
     align-items: center;
-    border: 2px solid black
+    justify-content: end;
+    justify-content: space-a;
+    width: 325px;
 }
 
 .name {
@@ -146,7 +149,7 @@ footer{
     padding: 10px 70px;
     display: flex;
     flex-direction: column;
-    margin: 30px 0;
+    margin-top: 30px;
     margin-left: -50px;
     margin-right: -50px;
 }
